# Scribit

./: .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: code-quality.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_note_updated_at.py
backend/backend/: requirements.txt  settings.py  supabase_client.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  Dockerfile  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.tsx  api.ts
frontend/src/components/: Form.jsx  Form.tsx  Note.jsx  Note.tsx  ProtectedRoute.tsx
frontend/src/pages/: Home.jsx  Home.tsx  NotFound.tsx
frontend/src/styles/: Form.css  Home.css  Note.css
