[project]
name = "backend"
version = "0.1.0"
description = "A minimal JWT-authenticated notes app"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "asgiref>=3.10.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "sqlparse>=0.5.3",
    "uvicorn>=0.38.0",
]
